Require file upload

--- a/data-formatter/index.html
+++ b/data-formatter/index.html
@@ -29,7 +29,7 @@
             <div form-messages></div>
             <div class="stacked">
                 <label for="to-format">Upload Spreadsheet</label>
-                <input type="file" name="to-format" id="to-format">
+                <input type="file" name="to-format" id="to-format" required>
             </div>
             <div class="stacked">
                 <label for="formatters">Select Formatter</label>
