Changed object key naming convension

--- a/data-formatter/index.html
+++ b/data-formatter/index.html
@@ -26,7 +26,7 @@
             <p>Upload a spreadsheet in a certain format, and download it in a different one. If a new formatter is
                 required, please reach out to <a href="mailto:jeremy@novaxpress.ca">jeremy@novaxpress.ca</a> to write
                 you one.</p>
-            <div form-messages></div>
+            <div formMessages></div>
             <div class="stacked">
                 <label for="to-format">Upload Spreadsheet</label>
                 <input type="file" name="to-format" id="to-format" required>
