Added change log entry

--- a/data-formatter/index.html
+++ b/data-formatter/index.html
@@ -52,6 +52,11 @@
 
             <div>
                 <h3>Change Log</h3>
+                <h4>June 9</h4>
+                <ul>
+                    <li>"ShipTrack to UPS Report" formatter can now handle missing quotes in the input UPS_MAN format.</li>
+                </ul>
+
                 <h4>June 3</h4>
                 <ul>
                     <li>Added support for headers on the output file.</li>
