Route identifier based on postal code

--- a/data-formatter/index.html
+++ b/data-formatter/index.html
@@ -52,9 +52,51 @@
 
             <div>
                 <h3>Change Log</h3>
+                <h4>June 14</h4>
+                <ul>
+                    <li>Added HRM Route Identifier for postal codes.
+                        <ul style="columns: 6">
+                            <li>B2T</li>
+                            <li>B3A</li>
+                            <li>B3B</li>
+                            <li>B3C</li>
+                            <li>B3D</li>
+                            <li>B3E</li>
+                            <li>B3F</li>
+                            <li>B3G</li>
+                            <li>B3H</li>
+                            <li>B3I</li>
+                            <li>B3J</li>
+                            <li>B3K</li>
+                            <li>B3L</li>
+                            <li>B3M</li>
+                            <li>B3N</li>
+                            <li>B3O</li>
+                            <li>B3P</li>
+                            <li>B3Q</li>
+                            <li>B3R</li>
+                            <li>B3S</li>
+                            <li>B3T</li>
+                            <li>B3U</li>
+                            <li>B3V</li>
+                            <li>B3W</li>
+                            <li>B3X</li>
+                            <li>B3Y</li>
+                            <li>B3Z</li>
+                            <li>B4A</li>
+                            <li>B4B</li>
+                            <li>B4C</li>
+                            <li>B4D</li>
+                            <li>B4E</li>
+                            <li>B4F</li>
+                            <li>B4G</li>
+                        </ul>
+                    </li>
+                </ul>
                 <h4>June 9</h4>
                 <ul>
-                    <li>"ShipTrack to UPS Report" formatter can now handle missing quotes in the input UPS_MAN format.</li>
+                    <li>"ShipTrack to UPS Report" formatter can now handle missing quotes in the input UPS_MAN format.
+                    </li>
                 </ul>
 
                 <h4>June 3</h4>
