--- a/data-formatter/index.html
+++ b/data-formatter/index.html
@@ -52,6 +52,10 @@
 
             <div>
                 <h3>Change Log</h3>
+                <h4>June 22</h4>
+                <ul>
+                    <li>Added BNI support "BNI to ShipTrack"</li>
+                </ul>
                 <h4>June 14</h4>
                 <ul>
                     <li>Added HRM Route Identifier for postal codes.
