--- a/data-formatter/index.html
+++ b/data-formatter/index.html
@@ -54,6 +54,10 @@
                 <h3>Change Log</h3>
                 <h4>June 22</h4>
                 <ul>
+                    <li>Seperated out addresses for "BNI to ShipTrack"</li>
+                </ul>
+                <h4>June 22</h4>
+                <ul>
                     <li>Added BNI support "BNI to ShipTrack"</li>
                 </ul>
                 <h4>June 14</h4>
