--- a/data-formatter/index.html
+++ b/data-formatter/index.html
@@ -52,6 +52,11 @@
 
             <div>
                 <h3>Change Log</h3>
+                <h4>June 26</h4>
+                <ul>
+                    <li>Added New BNI format support. (Rough)</li>
+                </ul>
+                <h3>Change Log</h3>
                 <h4>June 22</h4>
                 <ul>
                     <li>Seperated out addresses for "BNI to ShipTrack"</li>
