--- a/data-formatter/index.html
+++ b/data-formatter/index.html
@@ -54,9 +54,26 @@
                 <h3>Change Log</h3>
                 <h4>June 26</h4>
                 <ul>
+                    <li>Removed BNI format</li>
+                    <li>New custom format to ShipTrack<br>
+                        <ul>
+                            <li>Client Agent</li>
+                            <li>Tracking Id</li>
+                            <li>Name</li>
+                            <li>Address Line 1</li>
+                            <li>Address Line 2</li>
+                            <li>Postal Code</li>
+                            <li>City</li>
+                            <li>Province</li>
+                            <li>Country</li>
+                            <li>Service Type</li>
+                        </ul>
+                    </li>
+                </ul>
+                <h4>June 26</h4>
+                <ul>
                     <li>Added New BNI format support. (Rough)</li>
                 </ul>
-                <h3>Change Log</h3>
                 <h4>June 22</h4>
                 <ul>
                     <li>Seperated out addresses for "BNI to ShipTrack"</li>
