--- a/data-formatter/index.html
+++ b/data-formatter/index.html
@@ -52,6 +52,10 @@
 
             <div>
                 <h3>Change Log</h3>
+                <h4>June 28</h4>
+                <ul>
+                    <li>Improved AABB name generation (Condensed (Base 26))</li>
+                </ul>
                 <h4>June 26</h4>
                 <ul>
                     <li>Removed BNI format</li>
