Updated new BNI manifest format

--- a/data-formatter/index.html
+++ b/data-formatter/index.html
@@ -52,6 +52,10 @@
 
             <div>
                 <h3>Change Log</h3>
+                <h4>June 30</h4>
+                <ul>
+                    <li>Added support for new BNI manifest format. (Use "BNI to ShipTrack")</li>
+                </ul>
                 <h4>June 28</h4>
                 <ul>
                     <li>Improved AABB name generation (Condensed (Base 26))</li>
