Added reference number to custom format

--- a/data-formatter/index.html
+++ b/data-formatter/index.html
@@ -52,6 +52,24 @@
 
             <div>
                 <h3>Change Log</h3>
+                <h4>July 6</h4>
+                <ul>
+                    <li>Added Reference Number to "Custom to ShipTrack"<br>
+                        <ul>
+                            <li>Client Agent</li>
+                            <li>Tracking Id</li>
+                            <li>Reference Id</li>
+                            <li>Name</li>
+                            <li>Address Line 1</li>
+                            <li>Address Line 2</li>
+                            <li>Postal Code</li>
+                            <li>City</li>
+                            <li>Province</li>
+                            <li>Country</li>
+                            <li>Service Type</li>
+                        </ul>
+                    </li>
+                </ul>
                 <h4>June 30</h4>
                 <ul>
                     <li>Added support for new BNI manifest format. (Use "BNI to ShipTrack")</li>
@@ -63,20 +81,7 @@
                 <h4>June 26</h4>
                 <ul>
                     <li>Removed BNI format</li>
-                    <li>New custom format to ShipTrack<br>
-                        <ul>
-                            <li>Client Agent</li>
-                            <li>Tracking Id</li>
-                            <li>Name</li>
-                            <li>Address Line 1</li>
-                            <li>Address Line 2</li>
-                            <li>Postal Code</li>
-                            <li>City</li>
-                            <li>Province</li>
-                            <li>Country</li>
-                            <li>Service Type</li>
-                        </ul>
-                    </li>
+                    <li>New custom format to ShipTrack</li>
                 </ul>
                 <h4>June 26</h4>
                 <ul>
