BNI to ShipTrack

--- a/data-formatter/index.html
+++ b/data-formatter/index.html
@@ -52,6 +52,10 @@
 
             <div>
                 <h3>Change Log</h3>
+                <h4>July 13</h4>
+                <ul>
+                    <li>Fixed bug with BNI to ShipTrack (Hardcoded province as Nova Scotia)</li>
+                </ul>
                 <h4>July 6</h4>
                 <ul>
                     <li>Added Reference Number to "Custom to ShipTrack"<br>
