Reference ID 2 being set

--- a/data-formatter/index.html
+++ b/data-formatter/index.html
@@ -54,6 +54,7 @@
                 <h3>Change Log</h3>
                 <h4>July 13</h4>
                 <ul>
+                    <li>Now sets Reference ID (Reference 1) and Shipment ID to BNI reference ID</li>
                     <li>Fixed bug with BNI to ShipTrack (Hardcoded province as Nova Scotia)</li>
                 </ul>
                 <h4>July 6</h4>
