--- a/data-formatter/index.html
+++ b/data-formatter/index.html
@@ -21,6 +21,9 @@
 
 <body>
     <main>
+        
+        <h1 style="color:red;">THIS PROJECT IS NO LONGER BEING MAINTAINED! PLEASE USE THE FORMATTERS AT CORE.NOVAXPRESS.CA INSTEAD.</h1>
+        
         <form form="formatter">
             <h3>NovaXpress Spreadsheet Reformatter</h3>
             <p>Upload a spreadsheet in a certain format, and download it in a different one. If a new formatter is
